force-app/main/default/objects/Product_Vendors__c/Product_Vendors__c.object-meta.xml
<CustomObject>
    <label>Product Vendor</label>
    <nameField>
        <displayFormat>PV - {00000}</displayFormat>
        <label>Product Vendors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>