force-app/main/default/objects/Product_Vendors__c/fields/Approved_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_End_Date__c</fullName>
    <label>Approved End Date</label>
    <type>Date</type>
</CustomField>