force-app/main/default/objects/Product_Vendors__c/fields/Approved_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Start_Date__c</fullName>
    <label>Approved Start Date</label>
    <type>Date</type>
</CustomField>