force-app/main/default/objects/Product_Vendors__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Location</label>
    <referenceTo>Inventory_Location__c</referenceTo>
    <relationshipLabel>Product Vendors</relationshipLabel>
    <relationshipName>Approved_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>