force-app/main/default/objects/Product_Vendors__c/fields/Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preferred</label>
    <type>Checkbox</type>
</CustomField>