force-app/main/default/objects/Product_Vendors__c/fields/Last_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Price__c</fullName>
    <label>Last Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>