force-app/main/default/objects/Product_Vendors__c/fields/Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rating__c</fullName>
    <formula>IF(
    ISBLANK(Performance_Score__c),
    &quot;&quot;,
    IF(
        Performance_Score__c &gt;= 90,
        &quot;Excellent&quot;,
        IF(
            Performance_Score__c &gt;= 75,
            &quot;Good&quot;,
            IF(
                Performance_Score__c &gt;= 60,
                &quot;Average&quot;,
                IF(
                    Performance_Score__c &gt;= 40,
                    &quot;Poor&quot;,
                    &quot;Blocked&quot;
                )
            )
        )
    )
)</formula>
    <label>Performance Rating</label>
    <type>Text</type>
</CustomField>