force-app/main/default/objects/Product_Vendors__c/fields/Performance_Score__c.field-meta.xml
<CustomField>
    <fullName>Performance_Score__c</fullName>
    <label>Performance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>