force-app/main/default/objects/Product_Vendors__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Vendors</relationshipLabel>
    <relationshipName>Approved_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>