force-app/main/default/objects/Product_Vendors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Vendor__c</columns>
    <columns>Inventory_Location__c</columns>
    <columns>Is_Approved__c</columns>
    <columns>Is_Preferred__c</columns>
    <columns>Item__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>